Feat: Add animation for alternative options in InlineClosed component

--- a/linguaskill-mock/src/index.css
+++ b/linguaskill-mock/src/index.css
@@ -1,1 +1,15 @@
 @import "tailwindcss";
+
+@theme {
+  --animate-comeTop: comeTop 0.2s ease-in-out forwards;
+  --animate-backBottom: comeTop 0.2s ease-in-out backwards;
+
+  @keyframes comeTop {
+    from {
+      transform: translateY(+100px);
+    }
+    to {
+    transform: translateY(0px);
+    }
+  }
+}
