--- a/linguaskill-mock/src/index.css
+++ b/linguaskill-mock/src/index.css
@@ -13,3 +13,18 @@
     }
   }
 }
+
+@layer base {
+  td {
+    padding: 5px;
+    border: solid 1px;
+  }
+  th {
+    padding: 10px;
+    border: solid 1px;
+    background-color: hsl(0, 0%, 84%);
+  }
+  td > input[type='radio'] {
+    display: none;
+  }
+}
