--- a/linguaskill-mock/src/index.css
+++ b/linguaskill-mock/src/index.css
@@ -4,6 +4,7 @@
 @theme {
   --animate-comeTop: comeTop 0.2s ease-in-out forwards;
   --animate-backBottom: comeTop 0.2s ease-in-out backwards;
+  --animate-opacityIn: opacityIn 0.5s ease-in-out forwards;
   --font-poppins: "Poppins", sans-serif;
 
   @keyframes comeTop {
@@ -12,6 +13,15 @@
     }
     to {
     transform: translateY(0px);
+    }
+  }
+
+  @keyframes opacityIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
     }
   }
 }
