--- a/linguaskill-mock/src/index.css
+++ b/linguaskill-mock/src/index.css
@@ -1,18 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "tailwindcss";
 
 @theme {
   --animate-comeTop: comeTop 0.2s ease-in-out forwards;
   --animate-backBottom: comeTop 0.2s ease-in-out backwards;
   --animate-opacityIn: opacityIn 0.5s ease-in-out forwards;
+  --animate-scaleDown: scaleDown 0.5s ease-in-out forwards;
   --font-poppins: "Poppins", sans-serif;
+  --font-montserrat: "Montserrat", sans-serif;
+  --color-home-blue: hsl(219, 100%, 16%);
+  --color-home-orange: hsl(24, 100%, 57%);
 
   @keyframes comeTop {
     from {
       transform: translateY(+100px);
     }
     to {
-    transform: translateY(0px);
+      transform: translateY(0px);
     }
   }
 
@@ -22,6 +26,15 @@
     }
     to {
       opacity: 1;
+    }
+  }
+
+  @keyframes scaleDown {
+    from {
+      background-size: 150%
+    }
+    to {
+      background-size: 100%;
     }
   }
 }
